--- a/backup/contact.html
+++ b/backup/contact.html
@@ -822,10 +822,9 @@
             <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pricing.html">Products</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="terms.html">Terms</a></li>
             </ul>
         </nav>
     </header>
@@ -1018,15 +1017,15 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <a href="index.html">Home</a>
-                <a href="pricing.html">Products</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="about.html">About Us</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="footer-section">
                 <h4>Legal</h4>
                 <a href="terms.html">Terms of Service</a>
-                <a href="terms.html">Privacy Policy</a>
-                <a href="terms.html">Refund Policy</a>
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="refund.html">Refund Policy</a>
             </div>
             <div class="footer-section">
                 <h4>Support</h4>
@@ -1035,7 +1034,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Vanish Unleashed. All rights reserved. FiveM, GTA V, and other game names are trademarks of their respective owners.</p>
+            <p>&copy; 2024 Vanish Unleashed. All rights reserved. FiveM, GTA V, and other game names are trademarks of their respective owners.</p>
         </div>
     </footer>
 
