--- a/backup/index.html
+++ b/backup/index.html
@@ -450,24 +450,17 @@
         .payment-badges {
             display: flex;
             justify-content: center;
-            gap: 0.75rem;
+            gap: 0.5rem;
             margin-top: 0.75rem;
-            align-items: center;
         }
 
-        .payment-icon {
-            height: 20px;
-            opacity: 0.6;
-            transition: opacity 0.3s;
-        }
-
-        .payment-icon:hover {
-            opacity: 1;
-        }
-
-        .payment-icon svg {
-            height: 100%;
-            width: auto;
+        .badge {
+            background: rgba(139, 92, 246, 0.1);
+            border: 1px solid var(--border);
+            padding: 0.25rem 0.5rem;
+            border-radius: 4px;
+            font-size: 0.65rem;
+            color: var(--text-muted);
         }
 
         /* Responsive */
@@ -540,7 +533,6 @@
                 <li><a href="pricing.html">Products</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="terms.html">Terms</a></li>
                 <li><a href="pricing.html" class="nav-btn">View Products</a></li>
             </ul>
         </nav>
@@ -677,32 +669,12 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Vanish Unleashed. All rights reserved. FiveM, GTA V, and other game names are trademarks of their respective owners.</p>
+            <p>&copy; 2024 Vanish Unleashed. All rights reserved. FiveM, GTA V, and other game names are trademarks of their respective owners.</p>
             <div class="payment-badges">
-                <!-- Stripe -->
-                <span class="payment-icon" title="Stripe">
-                    <svg viewBox="0 0 60 25" fill="#635bff"><path d="M59.64 14.28h-8.06c.19 1.93 1.6 2.55 3.2 2.55 1.64 0 2.96-.37 4.05-.95v3.32a10.8 10.8 0 0 1-4.56.95c-4.01 0-6.83-2.5-6.83-7.28 0-4.19 2.39-7.32 6.26-7.32 3.83 0 5.94 3.08 5.94 6.97v1.76zm-5.95-5.15c-1.07 0-2.01.8-2.17 2.46h4.29c-.14-1.66-1.05-2.46-2.12-2.46zM40.95 5.87c1.74 0 3.03.47 3.89 1.03V3.09a10.9 10.9 0 0 0-3.6-.64c-4.02 0-6.66 2.29-6.66 5.87 0 2.65 1.21 4.4 4.06 5.8 2.1 1.04 2.72 1.68 2.72 2.8 0 1.23-.96 1.9-2.56 1.9-1.79 0-3.57-.64-4.67-1.36v4.1a11.6 11.6 0 0 0 4.67.96c4.12 0 6.87-2.12 6.87-5.98 0-2.9-1.36-4.47-4.35-5.93-2.17-1.06-2.62-1.73-2.62-2.76 0-1.04.86-1.78 2.25-1.78zM25.75 5.6l-.27 1.53c-.63-.24-1.47-.4-2.3-.4-2.4 0-4.17 2.1-4.17 5.38 0 3.22 1.65 5.05 4.08 5.05.87 0 1.75-.16 2.5-.48l.28 3.68c-.87.27-1.97.4-3.02.4-5.17 0-8.4-3.5-8.4-8.65 0-5.38 3.58-8.77 8.68-8.77 1.17 0 2.12.16 2.62.26zM13.37 17.52H9.04V5.87H5.12v-3.5h12.09v3.5h-3.84v11.65zM4.36 14.28H.08l-.08-.58c2.5-.64 4.08-1.79 4.08-3.75 0-.72-.28-1.3-.73-1.74-1.02-1-2.84-.96-4.08-.32V4.57c1.36-.56 3.05-.84 4.36-.84 3.1 0 5.18 1.68 5.18 4.78 0 3.3-2.28 5.37-4.45 5.77z"/></svg>
-                </span>
-                <!-- PayPal -->
-                <span class="payment-icon" title="PayPal">
-                    <svg viewBox="0 0 101 32" fill="#003087"><path d="M12.237 5.906h8.053c4.396 0 6.09 2.282 5.775 5.635-.481 5.114-3.596 7.96-7.883 7.96H15.31c-.585 0-.975.39-1.116 1.46l-.882 5.59c-.045.286-.19.455-.395.477h-4.28c-.39 0-.54-.3-.445-.766l3.37-19.655c.14-.858.695-1.17 1.17-1.17l-.495.469zm3.01 10.043h2.022c2.14 0 3.84-1.566 4.172-4.03.19-1.405-.57-2.606-2.29-2.606h-2.076c-.34 0-.527.273-.59.663l-.79 5.238c-.04.268.077.455.34.455l-.788.28zM34.598 25.028c-.55.44-1.177.704-1.856.704-1.177 0-1.78-.868-1.61-2.158.33-2.496 2.1-3.533 5.136-3.533h1.177l.207-1.31c.11-.715-.132-1.133-.89-1.133-.803 0-1.276.418-1.386 1.133h-4.12c.462-3.152 2.935-4.62 5.836-4.62 3.122 0 5 1.523 4.505 4.73l-.77 5.04c-.11.716-.023 1.08.33 1.08.176 0 .374-.044.572-.132l-.462 2.827c-.44.22-1.012.33-1.65.33-1.1 0-2-.396-2.243-1.468-.77.935-1.87 1.468-3.157 1.468-.638 0-.88-.055-1.32-.22l1.7-.738zm1.98-3.108c-1.397 0-2.12.44-2.23 1.32-.066.506.22.858.726.858.726 0 1.54-.572 1.738-1.848l.11-.693c-.088.198-.11.363-.344.363zM49.02 13.99l-.55 3.404h.066c.902-2.277 2.31-3.624 4.356-3.624.374 0 .726.044 1.056.132l-.726 4.4c-.374-.088-.792-.132-1.21-.132-2.2 0-3.498 1.848-3.806 3.8l-.66 4.356h-4.224l1.87-12.336h3.828zM54.06 20.254c.484-3.69 3.234-6.365 7.106-6.365 3.652 0 5.478 2.277 4.994 5.374-.484 3.668-3.256 6.497-7.062 6.497-3.696 0-5.544-2.32-5.038-5.506zm7.766-.22c.176-1.298-.22-2.43-1.32-2.43-1.364 0-2.134 1.32-2.332 2.76-.176 1.32.22 2.474 1.342 2.474 1.32 0 2.112-1.32 2.31-2.804zM67.012 26.378l1.87-12.336h4.224l-.33 2.156h.066c.946-1.65 2.354-2.376 4.026-2.376 2.42 0 3.828 1.738 3.432 4.4l-1.21 8.156H74.866l1.078-7.194c.176-1.166-.264-1.804-1.188-1.804-1.056 0-1.914.792-2.134 2.178l-1.034 6.82h-4.576zM82.05 26.378l1.87-12.336h4.224l-1.87 12.336H82.05zm2.288-13.93c-.044-.022-.066-.044-.11-.066-.88-.594-.924-1.804-.088-2.706.836-.902 2.178-1.144 3.058-.55.044.022.066.044.11.066.88.594.924 1.804.088 2.706-.836.902-2.178 1.144-3.058.55z"/></svg>
-                </span>
-                <!-- Visa -->
-                <span class="payment-icon" title="Visa">
-                    <svg viewBox="0 0 48 16" fill="#1a1f71"><path d="M19.315 15.333h-3.22L18.18.667h3.22l-2.085 14.666zM13.61.667l-3.07 10.07-.363-1.848-.001.002-1.086-5.568s-.132-.99-1.53-.99H2.06l-.06.222s1.492.31 3.24 1.36l2.69 10.418h3.35L17.088.667H13.61zm21.93 14.666h2.952L35.9.667h-2.59c-1.2 0-1.488.924-1.488.924l-4.81 13.742h3.35l.66-1.854h4.09l.388 1.854h.04zm-3.51-4.4l1.698-4.672.95 4.672h-2.648zM31.09 4.14l.458-2.662s-1.416-.542-2.892-.542c-1.596 0-5.386.7-5.386 4.1 0 3.2 4.458 3.24 4.458 4.92 0 1.68-4 1.38-5.32.32l-.477 2.78s1.436.7 3.63.7c2.194 0 5.506-1.14 5.506-4.24 0-3.22-4.498-3.52-4.498-4.92 0-1.4 3.14-1.22 4.52-.458v.002z"/></svg>
-                </span>
-                <!-- Mastercard -->
-                <span class="payment-icon" title="Mastercard">
-                    <svg viewBox="0 0 32 20" fill="none"><circle cx="10" cy="10" r="10" fill="#eb001b"/><circle cx="22" cy="10" r="10" fill="#f79e1b"/><path d="M16 3.82a9.94 9.94 0 0 0-3.82 7.82c0 3.1 1.41 5.87 3.62 7.7a9.94 9.94 0 0 0 3.82-7.82c0-3.1-1.41-5.87-3.62-7.7z" fill="#ff5f00"/></svg>
-                </span>
-                <!-- Bitcoin/Crypto -->
-                <span class="payment-icon" title="Cryptocurrency">
-                    <svg viewBox="0 0 24 24" fill="#f7931a"><path d="M23.638 14.904c-1.602 6.43-8.113 10.34-14.542 8.736C2.67 22.05-1.244 15.525.362 9.105 1.962 2.67 8.475-1.243 14.9.358c6.43 1.605 10.342 8.115 8.738 14.546zm-6.35-4.613c.24-1.59-.974-2.45-2.64-3.03l.54-2.153-1.315-.33-.526 2.1c-.345-.087-.7-.17-1.053-.25l.53-2.12-1.317-.33-.54 2.153c-.285-.065-.565-.13-.84-.2l.002-.01-1.815-.45-.35 1.4s.974.225.954.24c.533.135.63.49.614.77l-.616 2.47c.037.01.084.024.135.045l-.137-.034-.865 3.465c-.065.162-.23.404-.603.312.014.02-.955-.237-.955-.237l-.654 1.5 1.714.427c.318.08.63.164.936.243l-.546 2.19 1.314.326.54-2.157c.36.1.708.19 1.05.27l-.537 2.143 1.315.33.547-2.19c2.24.425 3.927.254 4.637-1.776.572-1.633-.03-2.576-1.208-3.19.86-.2 1.506-.766 1.68-1.937z"/></svg>
-                </span>
-                <!-- Square -->
-                <span class="payment-icon" title="Square">
-                    <svg viewBox="0 0 24 24" fill="#3e4348"><path d="M4.01 0A4 4 0 0 0 0 4.01v15.98A4 4 0 0 0 4.01 24h15.98A4 4 0 0 0 24 19.99V4.01A4 4 0 0 0 19.99 0H4.01zm2.18 5.36h11.62c.74 0 1.36.62 1.36 1.36v10.56c0 .74-.62 1.36-1.36 1.36H6.19a1.37 1.37 0 0 1-1.36-1.36V6.72c0-.74.62-1.36 1.36-1.36zm2.59 3.02v7.24h6.44V8.38H8.78z"/></svg>
-                </span>
+                <span class="badge">Stripe</span>
+                <span class="badge">PayPal</span>
+                <span class="badge">Visa</span>
+                <span class="badge">Mastercard</span>
             </div>
         </div>
     </footer>
