--- a/refund.html
+++ b/refund.html
@@ -472,157 +472,46 @@
             <p>Our commitment to fair and transparent refund practices for all digital products.</p>
         </div>
 
-        <div class="important-notice">
-            <div class="important-notice-icon">&#9888;</div>
+        <div class="important-notice" style="border-color: rgba(16, 185, 129, 0.3); background: linear-gradient(135deg, rgba(16, 185, 129, 0.15) 0%, rgba(16, 185, 129, 0.1) 100%);">
+            <div class="important-notice-icon">&#10003;</div>
             <div>
-                <h3>Important: Digital Products</h3>
-                <p>Due to the instant-delivery nature of digital products, all sales are generally final once download access has been provided. However, we evaluate refund requests on a case-by-case basis and are committed to customer satisfaction.</p>
+                <h3 style="color: #10b981;">14-Day Money-Back Guarantee</h3>
+                <p>We offer a full 14-day money-back guarantee on all products. Not satisfied? Request a refund within 14 days of purchase - no questions asked.</p>
             </div>
         </div>
 
         <div class="policy-content">
             <span class="last-updated">Last Updated: December 2024</span>
 
-            <h2>1. Overview</h2>
-            <p>At Vanish Unleashed, we stand behind the quality of our digital products. While digital goods are typically non-refundable after delivery, we understand that issues can arise. This policy outlines when refunds may be considered and the process for requesting one.</p>
+            <h2>1. 14-Day Money-Back Guarantee</h2>
+            <p>We offer a <strong>full 14-day money-back guarantee</strong> on all products. If you are not satisfied with your purchase for any reason, you can request a full refund within 14 days of your purchase date. No questions asked.</p>
 
             <h2>2. Refund Eligibility</h2>
-            <p>Refund requests are evaluated individually based on the circumstances. Below are general guidelines for eligibility:</p>
-
-            <div class="eligibility-grid">
-                <div class="eligibility-card eligible">
-                    <h4>&#10003; May Qualify for Refund</h4>
-                    <ul>
-                        <li>Product significantly different from description</li>
-                        <li>Critical functionality doesn't work as advertised</li>
-                        <li>Technical issue we cannot resolve</li>
-                        <li>Duplicate purchase (accidental)</li>
-                        <li>Product not delivered within 24 hours</li>
-                    </ul>
-                </div>
-                <div class="eligibility-card not-eligible">
-                    <h4>&#10005; Generally Not Eligible</h4>
-                    <ul>
-                        <li>Change of mind after download</li>
-                        <li>Incompatibility with your specific setup</li>
-                        <li>Failure to read product requirements</li>
-                        <li>Issues caused by third-party modifications</li>
-                        <li>Requests after 14 days of purchase</li>
-                    </ul>
-                </div>
-            </div>
-
-            <h2>3. Refund Timeframe</h2>
-            <p>To be considered for a refund, requests must be submitted within the following timeframes:</p>
+            <p><strong>All products</strong> are eligible for a full refund within <strong>14 days</strong> of purchase. This applies to:</p>
             <ul>
-                <li><strong>Scripts & Server Resources:</strong> Within 14 days of purchase</li>
-                <li><strong>Graphics Packs & Visual Mods:</strong> Within 7 days of purchase</li>
-                <li><strong>Bundles:</strong> Within 14 days of purchase</li>
-            </ul>
-            <p>Requests submitted after these periods will generally not be considered unless there are exceptional circumstances.</p>
-
-            <h2>4. Refund Process</h2>
-            <p>Follow these steps to request a refund:</p>
-
-            <div class="process-steps">
-                <div class="process-step">
-                    <div class="step-number">1</div>
-                    <div class="step-content">
-                        <h4>Contact Support</h4>
-                        <p>Email billing@vanishunleashed.com with your order number, purchase date, and reason for the refund request.</p>
-                    </div>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">2</div>
-                    <div class="step-content">
-                        <h4>Provide Documentation</h4>
-                        <p>Include any relevant screenshots, error messages, or evidence supporting your refund request.</p>
-                    </div>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">3</div>
-                    <div class="step-content">
-                        <h4>Allow Troubleshooting</h4>
-                        <p>For technical issues, we may ask to troubleshoot the problem first. Many issues can be resolved with support assistance.</p>
-                    </div>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">4</div>
-                    <div class="step-content">
-                        <h4>Review & Decision</h4>
-                        <p>We'll review your request within 3-5 business days and respond with our decision. We're a small team, so please be patient.</p>
-                    </div>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">5</div>
-                    <div class="step-content">
-                        <h4>Refund Processing</h4>
-                        <p>If approved, refunds are processed to your original payment method within 5-10 business days.</p>
-                    </div>
-                </div>
-            </div>
-
-            <h2>5. Partial Refunds</h2>
-            <p>In some cases, we may offer partial refunds. This includes:</p>
-            <ul>
-                <li>Bundle purchases where only some products have issues</li>
-                <li>Products that partially work as described</li>
-                <li>Situations where significant support time was provided</li>
+                <li>FiveM/RedM scripts and resources</li>
+                <li>Graphics packs and visual mods</li>
+                <li>GMod addons</li>
+                <li>Product bundles</li>
+                <li>All other digital products</li>
             </ul>
 
-            <h2>6. Non-Refundable Items</h2>
-            <p>The following are generally non-refundable:</p>
+            <h2>3. How to Request a Refund</h2>
+            <p>To request a refund, simply email <strong>billing@vanishunleashed.com</strong> with:</p>
             <ul>
-                <li>Custom development work or commissioned scripts</li>
-                <li>Installation services once completed</li>
-                <li>Products where you've violated our Terms of Service</li>
-                <li>Products that have been resold or redistributed</li>
+                <li>Your order number</li>
+                <li>The email address used for purchase</li>
             </ul>
+            <p>Refunds are typically processed within 3-5 business days and will be credited to your original payment method.</p>
 
-            <h2>7. Chargebacks and Payment Disputes</h2>
-            <p><strong style="color: #ef4444;">IMPORTANT: You MUST contact us before filing any chargeback or payment dispute.</strong></p>
+            <h2>4. Product Type Clarification</h2>
+            <p><strong>All products sold by Vanish Unleashed are digital goods only.</strong> We do not offer any human-driven services, consulting, custom development work, or installation services. All purchases are for downloadable digital files that are delivered automatically and instantly upon payment.</p>
 
-            <p>We understand that issues can arise, and we are committed to resolving them fairly. However, chargebacks for digital products you have received cause significant harm to our business and are taken very seriously.</p>
-
-            <p><strong>Before Filing a Chargeback:</strong></p>
-            <ul>
-                <li>Email billing@vanishunleashed.com with your order number and issue</li>
-                <li>Allow 1-3 business days for our response (we're a small team)</li>
-                <li>We will work with you to resolve any legitimate issue</li>
-            </ul>
-
-            <p><strong>Consequences of Filing a Chargeback Without Contacting Us:</strong></p>
-            <ul>
-                <li>Immediate and permanent revocation of all purchased product licenses</li>
-                <li>Permanent ban from future purchases</li>
-                <li>We will dispute the chargeback with full documentation including:
-                    <ul style="margin-top: 0.5rem;">
-                        <li>Proof of delivery (email confirmation, download logs)</li>
-                        <li>IP address and access records</li>
-                        <li>Acceptance of terms at checkout</li>
-                        <li>Any product usage/access logs</li>
-                    </ul>
-                </li>
-                <li>Your information may be reported to fraud prevention databases</li>
-                <li>We reserve the right to pursue legal action for fraudulent chargebacks</li>
-            </ul>
-
-            <p><strong>What Constitutes a Fraudulent Chargeback:</strong></p>
-            <ul>
-                <li>Claiming you didn't receive a product that was delivered to your email</li>
-                <li>Claiming "unauthorized transaction" when you made the purchase</li>
-                <li>Claiming the product was "not as described" without first contacting support</li>
-                <li>Filing a dispute after downloading and using the product</li>
-            </ul>
-
-            <p style="margin-top: 1rem;">We maintain comprehensive records of all transactions and deliveries. These records will be used to dispute any illegitimate chargeback claims. Our refund policy is fair and reasonable - there is no valid reason to file a chargeback without first contacting our support team.</p>
-
-            <h2>8. Contact Information</h2>
+            <h2>5. Contact Information</h2>
             <p>For refund requests or questions about this policy:</p>
             <ul>
                 <li><strong>Email:</strong> billing@vanishunleashed.com</li>
-                <li><strong>Discord:</strong> Join our server for faster response</li>
-                <li><strong>Response Time:</strong> 1-3 business days (we're a small team)</li>
+                <li><strong>Response Time:</strong> 1-3 business days</li>
             </ul>
         </div>
 
