--- a/terms.html
+++ b/terms.html
@@ -535,13 +535,13 @@
                 <p><strong>Proof of Delivery:</strong> We maintain comprehensive delivery records including email confirmations with timestamps, download access logs (IP address, date, time), order details, and customer information. These records serve as proof of delivery.</p>
 
                 <h2>8. Refund Policy Summary</h2>
-                <p>Due to the instant-delivery nature of digital products, <strong>all sales are generally final</strong>. However, we evaluate refund requests on a case-by-case basis. See the full Refund Policy tab for complete details.</p>
+                <p>We offer a <strong>14-day money-back guarantee</strong> on all products. If you are not satisfied with your purchase for any reason, you can request a full refund within 14 days of your purchase date.</p>
                 <p><strong>Key Points:</strong></p>
                 <ul>
-                    <li>Refund requests must be submitted within 14 days of purchase</li>
+                    <li>Full refund available within 14 days of purchase - no questions asked</li>
                     <li>Contact <strong>billing@vanishunleashed.com</strong> with your order number</li>
-                    <li>We are committed to resolving issues fairly before any dispute is filed</li>
-                    <li>Chargebacks filed without contacting us first will be disputed with full documentation</li>
+                    <li>Refunds processed within 3-5 business days</li>
+                    <li>See the full Refund Policy tab for complete details</li>
                 </ul>
 
                 <h2>9. Dispute Resolution & Chargebacks</h2>
@@ -676,68 +676,32 @@
         <!-- Refund Policy -->
         <div id="refund" class="tab-content">
             <div class="content-box">
-                <h2>1. Overview</h2>
-                <p>Due to the instant-delivery nature of digital products, <strong>all sales are generally final</strong> once download access is provided. However, we evaluate refund requests case-by-case.</p>
+                <h2>1. 14-Day Money-Back Guarantee</h2>
+                <p>We offer a <strong>full 14-day money-back guarantee</strong> on all products. If you are not satisfied with your purchase for any reason, you can request a full refund within 14 days of your purchase date. No questions asked.</p>
 
-                <h2>2. Refund Eligibility</h2>
-                <div class="info-grid">
-                    <div class="info-card green">
-                        <h4>May Qualify for Refund</h4>
-                        <ul>
-                            <li><strong>Misrepresentation:</strong> Product is significantly different from its description or advertised features</li>
-                            <li><strong>Non-functional:</strong> Core functionality doesn't work as described and we cannot fix it</li>
-                            <li><strong>Technical defect:</strong> Product has a bug or error that we are unable to resolve</li>
-                            <li><strong>Duplicate purchase:</strong> You accidentally purchased the same product twice</li>
-                            <li><strong>Non-delivery:</strong> Product was not delivered within 24 hours of purchase</li>
-                            <li><strong>Framework incompatibility:</strong> Product does not work with the framework version we advertised</li>
-                        </ul>
-                    </div>
-                    <div class="info-card red">
-                        <h4>Generally Not Eligible</h4>
-                        <ul>
-                            <li><strong>Buyer's remorse:</strong> Change of mind after downloading the product</li>
-                            <li><strong>Setup issues:</strong> Product doesn't work due to your specific server configuration</li>
-                            <li><strong>Ignored requirements:</strong> You did not read the listed requirements before purchase</li>
-                            <li><strong>Third-party conflicts:</strong> Issues caused by other scripts, mods, or modifications</li>
-                            <li><strong>Late request:</strong> Refund request submitted more than 14 days after purchase</li>
-                            <li><strong>Reselling attempt:</strong> Evidence that you attempted to redistribute the product</li>
-                            <li><strong>Subjective preference:</strong> Product works as described but doesn't meet personal expectations</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <h2>3. Refund Timeframe</h2>
+                <h2>2. How to Request a Refund</h2>
+                <p>To request a refund, simply email <strong>billing@vanishunleashed.com</strong> with:</p>
                 <ul>
-                    <li><strong>Scripts & Resources:</strong> Within 14 days</li>
-                    <li><strong>Graphics Packs:</strong> Within 7 days</li>
-                    <li><strong>Bundles:</strong> Within 14 days</li>
+                    <li>Your order number</li>
+                    <li>The email address used for purchase</li>
+                </ul>
+                <p>Refunds are typically processed within 3-5 business days and will be credited to your original payment method.</p>
+
+                <h2>3. Refund Window</h2>
+                <p><strong>All products</strong> are eligible for a full refund within <strong>14 days</strong> of purchase. This applies to:</p>
+                <ul>
+                    <li>FiveM/RedM scripts and resources</li>
+                    <li>Graphics packs and visual mods</li>
+                    <li>GMod addons</li>
+                    <li>Product bundles</li>
+                    <li>All other digital products</li>
                 </ul>
 
-                <h2>4. How to Request a Refund</h2>
-                <p>Email <strong>billing@vanishunleashed.com</strong> with your order number, purchase date, and reason. Include screenshots if applicable. Allow 3-5 business days for review.</p>
+                <h2>4. Product Type Clarification</h2>
+                <p><strong>All products sold by Vanish Unleashed are digital goods only.</strong> We do not offer any human-driven services, consulting, custom development work, or installation services. All purchases are for downloadable digital files that are delivered automatically and instantly upon payment.</p>
 
-                <h2>5. Chargebacks</h2>
-                <div class="warning-box">
-                    <p><strong>IMPORTANT:</strong> You MUST contact us before filing any chargeback. Chargebacks without contacting support first will result in:</p>
-                </div>
-                <ul>
-                    <li>Immediate revocation of all product licenses</li>
-                    <li>Permanent ban from future purchases</li>
-                    <li>We will dispute with full delivery documentation</li>
-                    <li>Your info may be reported to fraud databases</li>
-                    <li>We reserve the right to pursue legal action</li>
-                </ul>
-                <p>We maintain comprehensive records (email confirmations, download logs, IP addresses) and will use them to dispute fraudulent chargebacks. Our refund policy is fair - there's no reason to chargeback without contacting us first.</p>
-
-                <h2>6. Non-Refundable</h2>
-                <ul>
-                    <li>Custom development/commissioned work</li>
-                    <li>Installation services once completed</li>
-                    <li>Products where you violated our Terms</li>
-                </ul>
-
-                <h2>7. Contact</h2>
-                <p>Email: <strong>billing@vanishunleashed.com</strong><br>Response time: 1-3 business days (we're a small team)</p>
+                <h2>5. Contact</h2>
+                <p>Email: <strong>billing@vanishunleashed.com</strong><br>Response time: 1-3 business days</p>
             </div>
         </div>
 
